--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -535,6 +535,7 @@
     ul.social_icon {
         align-items: center;
         margin-left: auto;
+        margin-right: 15px;
     }
     
     ul.social_icon li {
@@ -748,6 +749,11 @@
             z-index: 10;
             height: 50px;
             width: 300px;
+        }
+        ul.social_icon {
+            align-items: center;
+            margin-left: auto;
+            margin-right: 25px;
         }
         .footer_inner1 {
             margin-left: 37%;
