made final changes

--- a/frontend/css/login-signup-forgotpassword.css
+++ b/frontend/css/login-signup-forgotpassword.css
@@ -77,74 +77,6 @@
 
 /* scrollbar end  */
 
-
-/* side nav  */
-
-
-/* The side navigation menu */
-
-.sidenav {
-    height: 100%;
-    /* 100% Full-height */
-    width: 0;
-    /* 0 width - change this with JavaScript */
-    position: fixed;
-    /* Stay in place */
-    z-index: 3;
-    /* Stay on top */
-    top: 0;
-    /* Stay at the top */
-    left: 0;
-    background: #00222D;
-    /* Black*/
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    padding-top: 60px;
-    /* Place content 60px from the top */
-    transition: 0.2s;
-    /* 0.5 second transition effect to slide in the sidenav */
-}
-
-
-/* The navigation menu links */
-
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #ffffff;
-    display: block;
-    transition: 0.3s;
-    z-index: 3;
-}
-
-
-/* When you mouse over the navigation links, change their color */
-
-.sidenav a:hover {
-    color: #ffffff;
-}
-
-
-/* Position and style the close button (top right corner) */
-
-#nav-bars {
-    position: absolute;
-    left: 20px;
-    top: 10px;
-    font-size: 20px;
-    z-index: 2;
-    color: rgb(255, 255, 255);
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
 html {
     font-size: 100%;
 }
@@ -156,6 +88,25 @@ section {
 }
 
 .navbar {
+    display: none;
+}
+
+.home-btn-desktop {
+    color: white !important;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+}
+
+.home-btn-desktop:hover {
+    color: black !important;
+}
+
+.navbar a {
+    color: white !important;
+}
+
+.nav-logo {
     display: none;
 }
 
@@ -275,9 +226,13 @@ section {
         height: 55px;
     }
     .nav-logo {
+        display: block;
         position: absolute;
         top: 1px;
         right: 10px;
+    }
+    .home-btn-desktop {
+        display: none;
     }
 }
 
@@ -306,10 +261,17 @@ section {
         background-color: #00222D !important;
         height: 55px;
     }
+    .navbar a {
+        color: white !important;
+    }
     .nav-logo {
+        display: block;
         position: absolute;
         top: 1px;
         right: 10px;
+    }
+    .home-btn-desktop {
+        display: none;
     }
 }
 
@@ -333,15 +295,26 @@ section {
         display: block;
         background-color: #00222D !important;
         height: 55px;
+        color: white;
+    }
+    .navbar a {
+        color: white !important;
     }
     .nav-logo {
+        display: block;
         position: absolute;
         top: 1px;
         right: 10px;
     }
+    .home-btn-desktop {
+        display: none;
+    }
 }
 
 @media (min-width: 674px) and (max-width: 900px) {
+    .navbar a {
+        color: white !important;
+    }
     .logo .logo-box {
         width: 17rem;
         margin: 0 1rem;
@@ -368,6 +341,9 @@ section {
 }
 
 @media (min-width: 901px) and (max-width: 1000px) {
+    .navbar a {
+        color: white !important;
+    }
     .logo .logo-box {
         width: 20rem;
     }
