--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -109,7 +109,12 @@
     
     .navbar {
         background: #00222D;
-        height: 10vh;
+        /* height: 10vh; */
+        z-index: 10;
+    }
+    
+    .navbar-toggler {
+        color: white !important;
     }
     
     .navbar-brand {
@@ -137,70 +142,6 @@
         background: #FFD700 !important;
         display: none;
     }
-    /* The side navigation menu */
-    
-    .sidenav {
-        height: 100%;
-        /* 100% Full-height */
-        width: 0;
-        /* 0 width - change this with JavaScript */
-        position: fixed;
-        /* Stay in place */
-        z-index: 3;
-        /* Stay on top */
-        top: 0;
-        /* Stay at the top */
-        left: 0;
-        background: #00222D;
-        /* Black*/
-        overflow-x: hidden;
-        /* Disable horizontal scroll */
-        padding-top: 60px;
-        /* Place content 60px from the top */
-        transition: 0.2s;
-        /* 0.5 second transition effect to slide in the sidenav */
-    }
-    /* The navigation menu links */
-    
-    .sidenav a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #ffffff;
-        display: block;
-        transition: 0.3s;
-        z-index: 3;
-    }
-    /* When you mouse over the navigation links, change their color */
-    
-    .sidenav a:hover {
-        color: #ffffff;
-    }
-    /* Position and style the close button (top right corner) */
-    
-    #nav-bars {
-        position: absolute;
-        left: 20px;
-        top: 15px;
-        font-size: 20px;
-        z-index: 2;
-        color: rgb(255, 255, 255);
-    }
-    
-    .sidenav .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-    }
-    /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-    
-    #main {
-        transition: margin-left .5s;
-        padding: 20px;
-    }
-    /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
     
     @media screen and (max-height: 450px) {
         .sidenav {
@@ -551,6 +492,10 @@
     #nav-bars {
         display: none;
     }
+    
+    .nav-mobile-logo {
+        display: none;
+    }
     /*--- Bootstrap Padding Fix --*/
     
     [class*="p1"] {
@@ -564,15 +509,31 @@
         #nav-bars {
             display: block;
         }
+        .navbar-toggler:focus,
+        .navbar-toggler:active,
+        .navbar-toggler-icon:focus {
+            outline: none;
+            box-shadow: none;
+            border: none;
+        }
         .navbar-toggler {
+            transition: ease-in-out !important;
+            border: none;
+            outline: none;
+            color: white;
+        }
+        .nav-mobile-logo {
+            display: block;
+        }
+        .nav-button1 {
             display: none;
         }
         .navbar-brand {
             display: none;
         }
-        .navbar {
+        /* .navbar {
             height: 10vh;
-        }
+        } */
         .white_bg {
             height: 90vh;
         }
@@ -600,7 +561,10 @@
             top: 10px;
             right: -40px;
             z-index: 2;
-            width: 20%;
+            width: 17%;
+            line-height: 15px;
+            text-align: center;
+            height: 35px;
             /* margin-right: 60px !important; */
             background: #FFD700 !important;
             display: block;
@@ -670,9 +634,6 @@
         }
         .nav-button-mobile {
             width: 40% !important;
-        }
-        .navbar {
-            height: 10vh;
         }
         .white_bg {
             height: 90vh;
